# real-time-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: query_service.py  update_service.py
app/api/: health.py
app/core/: config.py  dependencies.py  exceptions.py
app/models/: __init__.py  document.py  document_api.py  event.py  response.py
app/monitoring/: metrics.py
app/services/: batch.py  cache.py  chunking.py  database.py  dlq.py  embedding.py  event_processor.py  health.py  llm.py  metrics_parser.py  metrics_tracker.py  pipeline_tracker.py  query_processor.py  retry.py  vector_db.py
debezium/: connector-config.json
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: architecture.md  guides.md  production.md
frontend/: README.md  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DocumentPanel.tsx  MetricsPanel.tsx  PipelinePanel.tsx  QueryPanel.tsx
frontend/src/services/: api.ts
grafana/dashboards/: rag-metrics.json
prometheus/: alerts.yml
scripts/: benchmark.py  ingest_initial.py  setup_debezium.ps1
