[project]
name = "real-time-rag"
version = "0.1.0"
description = "Real-Time RAG system with CDC and incremental indexing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.3.0",
    "instructor>=1.0.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "aiokafka>=0.10.0",
    "asyncpg>=0.29.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.19.0",
    "python-multipart>=0.0.6",
    "tiktoken>=0.5.0",
    "langchain-text-splitters>=0.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

